import { Subject } from "./subject.model"

export interface Competence {
    subject: Subject,
    description: string
}