export interface Student {
    firstName: string,
    lastName: string
}